# WarpReduce

./: .gitignore  CMakeLists.txt  README.md  result.csv
include/: common.cuh  warp_reduce.cuh  warp_reduce_with_padding.cuh
src/: main.cu  warp_reduce.cu  warp_reduce_with_padding.cu
